--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,7 @@
 
                     <ul class="nav">
                         <li class="nav-item active ">
-                            <a class="nav-link" href="../examples/dashboard.html">
+                            <a class="nav-link" href="#">
               <i class="aminext-icon"><img src="assets/img/shape1.png" alt=""></i>
               <p> ダッシュボード </p>
             </a>
@@ -38,7 +38,7 @@
                         <li class="nav-item ">
                             <a class="nav-link" data-toggle="collapse" href="#pagesExamples">
               <i class="aminext-icon"><img src="assets/img/shape1.png" alt=""></i>
-              <p> AIME-OCR認識
+              <p> AIME-OCR 認識
 
               </p>
             </a>
