--- a/dashboard.html
+++ b/dashboard.html
@@ -487,8 +487,8 @@
             </div>
           </div>
         </div>
-        <a class="btn__upload" href="#">
-          <div class="btn__upload-image">
+        <a class="btn__aminate btn__upload" href="#">
+          <div class="btn__aminate-image">
             <img src="./assets/img/shap5.png" alt="" class="" />
           </div>
         </a>
