--- a/report.html
+++ b/report.html
@@ -189,7 +189,7 @@
       <div class="main-panel">
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">
-            <div class="container">
+            <div class="container" style="background-color: #E2F0FF;">
               <div class="report-preview">
                 <img
                   src="./assets/img/form1.png"
@@ -251,6 +251,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-xs-12 col-sm-6 col-md-10 col-lg-10">
             <div
               class="d-flex justify-content-around flex-column"
@@ -515,7 +516,7 @@
                       type="button"
                       class="btn btn-md btn-custom btn-custom--secodary__color"
                     >
-                      <img src="./assets/img/arrow2.png.png" alt="" />
+                      <img src="./assets/img/arrow2.png" alt="" />
                       <span>戻す</span>
                     </button>
                   </div>
@@ -534,7 +535,7 @@
                       class="btn btn-md btn-custom btn-custom--secodary__color"
                     >
                       <span>次へ</span>
-                      <img src="./assets/img/arrow.png.png" alt="" />
+                      <img src="./assets/img/arrow.png" alt="" />
                     </button>
                   </div>
                 </div>
