--- a/upload.html
+++ b/upload.html
@@ -31,8 +31,19 @@
   <body class="">
     <div class="wrapper">
       <div class="sidebar" style="background-color:#fff;padding: 20px">
-        <div class="logo">
-          <a href="#"> <img src="assets/img/logo.png"/></a>
+        <div class="sidebar__header">
+          <div class="logo">
+            <a href="#"> <img src="assets/img/logo.png"/></a>
+          </div>
+
+          <div class="navbar-minimize">
+            <button
+              id="minimizeSidebarsubb"
+              class="btn btn-just-icon btn-white btn-fab btn-round"
+            >
+              <img src="assets/img/group8.png" alt="" />
+            </button>
+          </div>
         </div>
         <div class="sidebar-wrapper">
           <ul class="nav">
@@ -47,7 +58,7 @@
             <li class="nav-item ">
               <a class="nav-link" data-toggle="collapse" href="#pagesExamples">
                 <i class="aminext-icon"
-                  ><img src="assets/img/shape1.png" alt=""
+                  ><img src="assets/img/Combined Shape.png" alt=""
                 /></i>
                 <p>AIME-OCR 認識</p>
               </a>
@@ -59,12 +70,12 @@
                     </a>
                   </li>
                   <li class="nav-item ">
-                    <a class="nav-link" href="../examples/pages/rtl.html">
+                    <a class="nav-link" href="#">
                       <span class="sidebar-normal"> ナンバープレート </span>
                     </a>
                   </li>
                   <li class="nav-item ">
-                    <a class="nav-link" href="../examples/pages/timeline.html">
+                    <a class="nav-link" href="#">
                       <span class="sidebar-mini"> T </span>
                       <span class="sidebar-normal"> 運転免許証 </span>
                     </a>
@@ -79,7 +90,7 @@
                 href="#componentsExamples"
               >
                 <i class="aminext-icon"
-                  ><img src="assets/img/shape1.png" alt=""
+                  ><img src="assets/img/Combined Shape1.png" alt=""
                 /></i>
                 <p>ファイルマスター</p>
               </a>
@@ -106,7 +117,7 @@
                   <li class="nav-item ">
                     <a
                       class="nav-link"
-                      href="../examples/components/buttons.html"
+                      href="#"
                     >
                       <span class="sidebar-normal"> ファイル設定 </span>
                     </a>
@@ -117,7 +128,7 @@
             <li class="nav-item ">
               <a class="nav-link" data-toggle="collapse" href="#formsExamples">
                 <i class="aminext-icon"
-                  ><img src="assets/img/shape1.png" alt=""
+                  ><img src="assets/img/Combined Shape2.png" alt=""
                 /></i>
                 <p>出力ファイルマスター</p>
               </a>
@@ -134,7 +145,7 @@
             <li class="nav-item ">
               <a class="nav-link" data-toggle="collapse" href="#tablesExamples">
                 <i class="aminext-icon"
-                  ><img src="assets/img/shape1.png" alt=""
+                  ><img src="assets/img/Combined Shape3.png" alt=""
                 /></i>
                 <p>設定</p>
               </a>
@@ -164,7 +175,7 @@
             <li class="nav-item ">
               <a class="nav-link" data-toggle="collapse" href="#mapsExamples">
                 <i class="aminext-icon"
-                  ><img src="assets/img/shape1.png" alt=""
+                  ><img src="assets/img/Shape4.png" alt=""
                 /></i>
                 <p>利用マニュアル</p>
               </a>
@@ -194,13 +205,10 @@
           <div class="container-fluid">
             <div class="navbar-wrapper">
               <div class="navbar-minimize">
-                <button
-                  id="minimizeSidebar"
-                  class="btn btn-just-icon btn-white btn-fab btn-round"
-                >
-                  <img src="assets/img/group8.png" alt="" />
-                </button>
-              </div>
+              <button style="visibility: hidden" id="minimizeSidebar" class="btn btn-just-icon btn-white btn-fab btn-round">
+                <div class="ripple-container"></div>  <img src="assets/img/group8.png" alt="" />
+              </button>
+            </div>
               <h2 class="navbar__title">AIME-OCR認識 / <span> 帳票</span></h2>
             </div>
             <button
@@ -238,7 +246,7 @@
                     aria-haspopup="true"
                     aria-expanded="false"
                   >
-                    <i class="material-icons">person</i>
+                    <i class="material-icons">arrow_drop_down</i>
                     <p class="d-lg-none d-md-block">
                       Account
                     </p>
@@ -301,75 +309,19 @@
     <script src="assets/js/core/popper.min.js"></script>
     <script src="assets/js/core/bootstrap-material-design.min.js"></script>
     <script src="assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-    <!-- Plugin for the momentJs  -->
-    <script src="assets/js/plugins/moment.min.js"></script>
-    <!--  Plugin for Sweet Alert -->
-    <script src="assets/js/plugins/sweetalert2.js"></script>
-    <!-- Forms Validations Plugin -->
-    <script src="assets/js/plugins/jquery.validate.min.js"></script>
-    <!-- Plugin for the Wizard, full documentation here: https://github.com/VinceG/twitter-bootstrap-wizard -->
-    <script src="assets/js/plugins/jquery.bootstrap-wizard.js"></script>
-    <!--  Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
-    <script src="assets/js/plugins/bootstrap-selectpicker.js"></script>
-    <!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
-    <script src="assets/js/plugins/bootstrap-datetimepicker.min.js"></script>
-    <!--  DataTables.net Plugin, full documentation here: https://datatables.net/  -->
     <script src="assets/js/plugins/jquery.dataTables.min.js"></script>
-    <!--  Plugin for Tags, full documentation here: https://github.com/bootstrap-tagsinput/bootstrap-tagsinputs  -->
-    <script src="assets/js/plugins/bootstrap-tagsinput.js"></script>
-    <!-- Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput -->
-    <script src="assets/js/plugins/jasny-bootstrap.min.js"></script>
-    <!--  Full Calendar Plugin, full documentation here: https://github.com/fullcalendar/fullcalendar    -->
-    <script src="assets/js/plugins/fullcalendar.min.js"></script>
-    <!-- Vector Map plugin, full documentation here: http://jvectormap.com/documentation/ -->
-    <script src="assets/js/plugins/jquery-jvectormap.js"></script>
-    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-    <script src="assets/js/plugins/nouislider.min.js"></script>
-    <!-- Include a polyfill for ES6 Promises (optional) for IE11, UC Browser and Android browser support SweetAlert -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script>
-    <!-- Library for adding dinamically elements -->
-    <script src="assets/js/plugins/arrive.min.js"></script>
-    <!--  Google Maps Plugin    -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Yno10-YTnLjjn_Vtk0V8cdcY5lC4plU"></script>
-    <!-- Place this tag in your head or just before your close body tag. -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <!-- Chartist JS -->
-    <!-- <script src="assets/js/plugins/chartist.min.js"></script> -->
-    <!--  Notifications Plugin    -->
-    <script src="assets/js/plugins/bootstrap-notify.js"></script>
-    <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
     <script
       src="assets/js/material-dashboard.min.js?v=2.1.0"
       type="text/javascript"
     ></script>
-    <!-- Material Dashboard DEMO methods, don't include it in your project! -->
-    <script src="assets/demo/demo.js"></script>
-    <script>
-      $(document).ready(function() {
-        $().ready(function() {
-          $sidebar = $(".sidebar");
+    <script type="text/javascript">
+      jQuery(document).ready(function(){
+          $(document).on('click', '#minimizeSidebarsub', function(event) {
 
-          $sidebar_img_container = $sidebar.find(".sidebar-background");
-
-          $full_page = $(".full-page");
-
-          $sidebar_responsive = $("body > .navbar-collapse");
-
-          window_width = $(window).width();
-
-          fixed_plugin_open = $(
-            ".sidebar .sidebar-wrapper .nav li.active a p"
-          ).html();
-
-          if (window_width > 767 && fixed_plugin_open == "Dashboard") {
-            if ($(".fixed-plugin .dropdown").hasClass("show-dropdown")) {
-              $(".fixed-plugin .dropdown").addClass("open");
-            }
-          }
-        });
-      });
+           event.preventDefault();
+          $('#minimizeSidebar').click();
+        })
+      })
     </script>
-    <!-- Sharrre libray -->
-    <script src="assets/demo/jquery.sharrre.js"></script>
   </body>
 </html>
