--- a/character.html
+++ b/character.html
@@ -252,7 +252,7 @@
                     <div class="content " style="background-color: #EFF7FF !important; position:relative;text-align: center;top:100px">
                         <div class="row">
                             <div class="col-lg-6">
-                                <img src="assets/img/bg.png" alt="" width="80%"height="720px" />
+                                <img src="assets/img/bg.png" alt="" width="80%"height="90%" />
                             </div>
                             <div class="col-lg-6">
                                 <table  class="table " >
@@ -315,9 +315,9 @@
 
                         </div>
                         <div class=" flex flex-row mt-5">
-                            <button class="normal b mr-5 pl-3 pr-3" style="width:250px"><img src="assets/img/left.png" alt=""/><span class="ml-3">戻す</span></button>
-                            <button class="normal b mr-5 pl-3 pr-3" style="width:250px"><img src="assets/img/download.png" alt=""/><span class="ml-3">ダウンロード </span></button>
-                            <button class="normal b mr-5 pl-3 pr-3" style="width:250px"><span class="mr-3">次へ </span><img src="assets/img/right.png" alt=""/></button>
+                            <button class="normal b mr-5 pl-3 pr-3" style="width:20%"><img src="assets/img/left.png" alt=""/><span class="ml-3">戻す</span></button>
+                            <button class="normal b mr-5 pl-3 pr-3" style="width:20%"><img src="assets/img/download.png" alt=""/><span class="ml-3">ダウンロード </span></button>
+                            <button class="normal b mr-5 pl-3 pr-3" style="width:20%"><span class="mr-3">次へ </span><img src="assets/img/right.png" alt=""/></button>
 
                         </div>
                     </div>
